Closed
Bug 218927
Opened 22 years ago
Closed 22 years ago
basic auth: "remember this password" checkbox should be checked if password was remembered
Categories
(Toolkit :: Password Manager, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.7.5
People
(Reporter: r.firth, Assigned: bryner)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
1.12 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030910 Firebird/0.6.1+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5b) Gecko/20030910 Firebird/0.6.1+
Remember password checkbox is unchecked even though password has been remembered
by password manager.
Reproducible: Always
Steps to Reproduce:
1. go to site requiring password authentication
2. enter username/password + check "User Password Manager to remember this
password" checkbox
3. close browser
4. go to same site again.
Actual Results:
Username and password filled in, but checkbox is unchecked
Expected Results:
Checkbox should be checked if the password is remembered by password manager.
If you check remember checkbox a duplicate entry will be remembered by password
manager.
This is under Firebird because it only happens in firebird, it works fine for
Mozilla.
This doesn't occur on Firebird 0.6.1 milestone.
Added keyword: regression
Keywords: regression
Comment 2•22 years ago
|
||
Password manager remembers the user/pass, as designed. If that's checked (i.e.
MZ forums), the saved cookie should prevent you from seeing the sign-in page.
The checkbox isn't supposed to be saved by password manager.
-> bryner, to make sure I'm not crazy in thinking this is working properly.
Assignee: blake → bryner
QA Contact: asa → mpconnor
sorry, I don't think you've understood which checkbox I mean...
I'm talking about sites that ask for username/password authentication to access
them e.g. proxy server or restricted subdomains, not sites that use cookies.
When the prompt is popped up, there is are two text fields and a checkbox as
part of the mozilla UI (not site dependant).
Hope that's a bit clearer.
Updated•22 years ago
|
Summary: Use Password Manager to remember this password checkbox should be checked if password is remembered → basic auth: "remember this password" checkbox should be checked if password was remembered
Comment 4•22 years ago
|
||
Moving all active Password Manager bugs to Autocomplete component with
[pwd-mngr] in summary for querying. Sorry for the bugspam.
Component: General → Autocomplete
Summary: basic auth: "remember this password" checkbox should be checked if password was remembered → [pwd-mngr] basic auth: "remember this password" checkbox should be checked if password was remembered
Updated•22 years ago
|
Component: Autocomplete → Password Manager
I see this in Linux too (Gecko/20031007 Firebird/0.7)
OS -> All
OS: Windows XP → All
*** Bug 222955 has been marked as a duplicate of this bug. ***
Comment 7•22 years ago
|
||
*** Bug 228108 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 8•22 years ago
|
||
| Assignee | ||
Comment 9•22 years ago
|
||
This doesn't address the duplicate entry issue, but I think I have a handle on that.
| Assignee | ||
Comment 10•22 years ago
|
||
fix both issues. AddUser needs to look for an existing entry, and if it finds
one, just update the password.
Attachment #137220 -
Attachment is obsolete: true
| Assignee | ||
Comment 11•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 12•22 years ago
|
||
v.
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.6b) Gecko/20031212 Firebird/0.7+
Status: RESOLVED → VERIFIED
Summary: [pwd-mngr] basic auth: "remember this password" checkbox should be checked if password was remembered → basic auth: "remember this password" checkbox should be checked if password was remembered
Updated•17 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•