Fix bug 218927 - check the 'remember' check box initially if the password was already stored, and prevent duplicate entries from being created when using auth dialogs.